--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
     <li><a href="#!/dex">dex</a></li>
     <li><a href="#!/view2">view2</a></li>
   </ul> -->
-  <a href="https://fontmeme.com/pokemon-font/">
+  <a href="">
       <img src="https://fontmeme.com/permalink/180203/7819046d84ad766545f1ffdf5b77a5d2.png" alt="pokemon-font" border="0">
   </a>
   <div ng-view></div>
