--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 7]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> 
-<html lang="en" ng-app="myApp" class="no-js">
+<html lang="en" ng-app="app" class="no-js">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,7 +22,7 @@
     <li><a href="#!/dex">dex</a></li>
     <li><a href="#!/view2">view2</a></li>
   </ul> -->
-  <a href="">
+  <a href="https://fontmeme.com/pokemon-font/">
       <img src="https://fontmeme.com/permalink/180203/7819046d84ad766545f1ffdf5b77a5d2.png" alt="pokemon-font" border="0">
   </a>
   <div ng-view></div>
@@ -30,10 +30,11 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="app.js"></script>
-  <script src="dex/controller/dex.controller.js"></script>
-  <script src="dex/service/dex.service.js"></script>
-  <script src="dex/factory/dex.factory.js"></script>
-  <script src="view2/controller/view2.js"></script>
+  <script src="pokedex/pokedex.module.js"></script>
+  <script src="pokedex/pokedex.config.js"></script>
+  <script src="pokedex/controller/pokedex.controller.js"></script>
+  <script src="pokedex/service/pokedex.service.js"></script>
+  <script src="pokedex/factory/pokedex.factory.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
