--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="app.css">
+  <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 
@@ -22,7 +23,7 @@
     <li><a href="#!/dex">dex</a></li>
     <li><a href="#!/view2">view2</a></li>
   </ul> -->
-  <a href="https://fontmeme.com/pokemon-font/">
+  <a>
       <img src="https://fontmeme.com/permalink/180203/7819046d84ad766545f1ffdf5b77a5d2.png" alt="pokemon-font" border="0">
   </a>
   <div ng-view></div>
@@ -33,6 +34,7 @@
   <script src="pokedex/pokedex.module.js"></script>
   <script src="pokedex/pokedex.config.js"></script>
   <script src="pokedex/controller/pokedex.controller.js"></script>
+  <script src="pokedex/controller/status.controller.js"></script>
   <script src="pokedex/service/pokedex.service.js"></script>
   <script src="pokedex/factory/pokedex.factory.js"></script>
   <script src="components/version/version.js"></script>
